--- a/ProgAtoZ-ClassicsMadlibs/index.html
+++ b/ProgAtoZ-ClassicsMadlibs/index.html
@@ -25,7 +25,7 @@
 		<!-- JS scripts -->
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.12/p5.js"></script>
 		<script src="rita-full.min.js"></script>
-		<script src="setup.js"></script>
+		<script src="madlibs.js"></script>
 
 	</head>
 
