--- a/ProgAtoZ-MusicHaiku/index.html
+++ b/ProgAtoZ-MusicHaiku/index.html
@@ -26,7 +26,7 @@
 
     <h1>Context-Free Grammar</h1>
 
-    <p>This page demonstrates generating text from a <a href="https://en.wikipedia.org/wiki/Context-free_grammar">Context-Free Grammar</a>.  The grammar is <a href="grammars/haiku.json">imported from a local JSON file</a>.</p>
+    <p>This page demonstrates generating text from a <a href="https://en.wikipedia.org/wiki/Context-free_grammar">Context-Free Grammar</a>.  The grammar is <a href="haiku.json">imported from a local JSON file</a>.</p>
 
     <p><a href="https://github.com/shiffman/A2Z-F15/issues">File issues</a> and <a href="https://github.com/shiffman/A2Z-F15/tree/gh-pages/week8/01_cfg_raw/">view source</a> on github</a>.</p>
 
