--- a/SensoryDrivenStorytelling-Assignment1/index.html
+++ b/SensoryDrivenStorytelling-Assignment1/index.html
@@ -61,7 +61,7 @@
 		<br />
 		<div id="assignment">
 
-			<p>I chose a variety of mediums that I found interesting in terms of storytelling because I couln't pick just one.</p>
+			<p>I chose two mediums that I found interesting in terms of storytelling because I couln't pick just one.</p>
 
 			<div id="vine" class="storytelling-medium">
 
